# titvo-agent-aws

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  serverless.hcl
aws/batch/: terragrunt.hcl
aws/ecr/: terragrunt.hcl
aws/ssm/upsert/: terragrunt.hcl
src/: logging_config.py  main.py
src/code_analysis/application/: analyse_code_use_case.py
src/code_analysis/domain/: notification_service.py
src/code_analysis/domain/dto/: bitbucket_dto.py  result_dto.py
src/code_analysis/domain/entities/: expert_result.py  task_entity.py
src/code_analysis/domain/ports/: bitbucket_repository.py  github_repository.py  ia_agent.py  rag_context_port.py  rag_index_status_port.py  report_repository.py  security_expert.py  task_repository.py
src/code_analysis/domain/services/: findings_merger.py
src/code_analysis/infra/adapters/: dynamo_task_repository.py  lambda_bitbucket_repository.py  lambda_github_repository.py  lambda_payload_json.py  lambda_report_repository.py  langchain_agent_adapter.py  langgraph_agent.py  s3_rag_index_status_adapter.py  s3_sqlite_rag_context_adapter.py
src/code_analysis/prompts/: __init__.py  content_template.md  findings_consolidation.md  orchestrator_prompt.md  system_prompt.md
src/rag_indexer_trigger/: __init__.py  batch_service.py  rag_indexer_batch_trigger.py
tests/unit/: test_analyse_code_use_case.py  test_expert_nodes.py  test_expert_result.py  test_findings_merger.py  test_langgraph_workflow.py  test_notification_service.py  test_prompts.py  test_rag_retrieval_node.py
(+21 files in other folders)
